--- a/arch/arm/boot/dts/qcom/apq8084.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084.dtsi
@@ -4843,11 +4843,11 @@
 		qcom,bcl-enable;
 		qcom,ibat-vadc = <&pma8084_vadc>;
 		qcom,ibat-threshold-adc_tm = <&pma8084_adc_tm>;
-		qcom,bcl-hotplug-list = <&CPU2 &CPU3>;
+		/delete-property/ qcom,bcl-hotplug-list;
 		qcom,ibat-monitor {
 			high-threshold-uamp = <3000000>;
 			low-threshold-uamp = <1000000>;
-			mitigation-freq-khz = <1958400>;
+			mitigation-freq-khz = <1190400>;
 			mitigation-gpu-freq-khz = <389000>;
 			max-gpu-freq-khz = <600000>;
 			ibat-channel = <0x15>;
